@@ -6,7 +6,7 @@
 	# See the README and LICENSE files for details
 
 	# --------------------------------------------------------
-	# $Id: bug_report.php,v 1.45 2005-08-09 00:30:51 thraxisp Exp $
+	# $Id: bug_report.php,v 1.46 2006-04-22 06:19:40 vboctor Exp $
 	# --------------------------------------------------------
 
 	# This page stores the reported bug
@@ -32,18 +32,18 @@
 	$t_bug_data->handler_id			= gpc_get_int( 'handler_id', 0 );
 	$t_bug_data->view_state			= gpc_get_int( 'view_state', config_get( 'default_bug_view_status' ) );
 
-	$t_bug_data->category				= gpc_get_string( 'category', '' );
-	$t_bug_data->reproducibility		= gpc_get_int( 'reproducibility' );
-	$t_bug_data->severity				= gpc_get_int( 'severity' );
+	$t_bug_data->category				= gpc_get_string( 'category', config_get( 'default_bug_category' ) );
+	$t_bug_data->reproducibility		= gpc_get_int( 'reproducibility', config_get( 'default_bug_reproducibility' ) );
+	$t_bug_data->severity				= gpc_get_int( 'severity', config_get( 'default_bug_severity' ) );
 	$t_bug_data->priority				= gpc_get_int( 'priority', config_get( 'default_bug_priority' ) );
 	$t_bug_data->summary				= gpc_get_string( 'summary' );
 	$t_bug_data->description			= gpc_get_string( 'description' );
-	$t_bug_data->steps_to_reproduce	= gpc_get_string( 'steps_to_reproduce', '' );
-	$t_bug_data->additional_information	= gpc_get_string( 'additional_info', '' );
+	$t_bug_data->steps_to_reproduce	= gpc_get_string( 'steps_to_reproduce', config_get ( 'default_bug_additional_info' ) );
+	$t_bug_data->additional_information	= gpc_get_string( 'additional_info', config_get( 'default_bug_view_status' ) );
 
 	$f_file					= gpc_get_file( 'file', null ); #@@@ (thraxisp) Note that this always returns a structure
 															# size = 0, if no file
-	$f_report_stay			= gpc_get_bool( 'report_stay' );
+	$f_report_stay			= gpc_get_bool( 'report_stay', false );
 	$t_bug_data->project_id			= gpc_get_int( 'project_id' );
 
 	$t_bug_data->reporter_id		= auth_get_current_user_id();
