@@ -6,7 +6,7 @@
 	# See the README and LICENSE files for details
 
 	# --------------------------------------------------------
-	# $Id: bug_report_page.php,v 1.56 2005-08-07 18:42:45 ryandesign Exp $
+	# $Id: bug_report_page.php,v 1.57 2006-04-22 06:19:40 vboctor Exp $
 	# --------------------------------------------------------
 
 	# This file POSTs data to report_bug.php
@@ -70,14 +70,12 @@
 		$f_view_state			= $t_bug->view_state;
 
 		$t_project_id			= $t_bug->project_id;
-
-	}
-	else {
+	} else {
 	    access_ensure_project_level( config_get( 'report_bug_threshold' ) );
 
 		$f_product_version		= gpc_get_string( 'product_version', '' );
-		$f_category				= gpc_get_string( 'category', '' );
-		$f_reproducibility		= gpc_get_int( 'reproducibility', 0 );
+		$f_category				= gpc_get_string( 'category', config_get( 'default_bug_category' ) );
+		$f_reproducibility		= gpc_get_int( 'reproducibility', config_get( 'default_bug_reproducibility' ) );
 		$f_severity				= gpc_get_int( 'severity', config_get( 'default_bug_severity' ) );
 		$f_priority				= gpc_get_int( 'priority', config_get( 'default_bug_priority' ) );
 		$f_summary				= gpc_get_string( 'summary', '' );
@@ -90,7 +88,7 @@
 		$t_changed_project		= false;
 	}
 
-	$f_report_stay			= gpc_get_bool( 'report_stay' );
+	$f_report_stay			= gpc_get_bool( 'report_stay', false );
 
 	html_page_top1( lang_get( 'report_bug_link' ) );
 	html_page_top2();
